--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-REACT_APP_DOMAIN=
-REACT_APP_CLIENT_ID=
-REACT_APP_SERVER=
+REACT_APP_DOMAIN=dev-1bv3gc82.us.auth0.com
+REACT_APP_CLIENT_ID=MNViJI9JAkcJTNfaCJGrrgR1VBvsRoxH
+REACT_APP_SERVER=http://localhost:4000
